# Multi_Agentic_Platform

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sample_data/: company_handbook.txt  product_faq.json  security_controls.csv
src/multi_agentic_platform/: __init__.py  config.py  main.py  orchestrator.py  schemas.py
src/multi_agentic_platform/agents/: base.py  presets.py
src/multi_agentic_platform/mcp/: __init__.py  service.py
src/multi_agentic_platform/providers/: base.py  huggingface_inference_provider.py  huggingface_provider.py  mock.py  openai_provider.py
src/multi_agentic_platform/rag/: __init__.py  chunking.py  embedder.py  loaders.py  online_embedder.py  pipeline.py  reranker.py  vector_store.py
src/multi_agentic_platform/sandbox/: executor.py
src/multi_agentic_platform/workflow/: __init__.py  langchain_rag.py  langgraph_company.py
