[project]
name = "multi-agentic-platform"
version = "0.1.0"
description = "Production-grade multi-agent orchestration platform with a sandboxed execution layer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "tenacity>=8.3.0",
  "numpy>=1.26.0",
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=3.0.0",
  "pypdf>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
